<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/rgListOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtnSuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_suma"/>

            <RadioButton
                android:id="@+id/rbtnResta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_resta"/>

            <RadioButton
                android:id="@+id/rbtnMultiplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_mult"/>

            <RadioButton
                android:id="@+id/rbtnDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_div"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/etFirstNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_number"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etSecondNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_second_number"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRunOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_run"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_result"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/operationResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_result"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </LinearLayout>

</LinearLayout>